@@ -54,6 +54,10 @@ if ENABLE_JACK
 jack_module = xineplug_ao_out_jack.la
 endif
 
+if ENABLE_SNDIO
+sndio_module = xineplug_ao_out_sndio.la
+endif
+
 xineplug_LTLIBRARIES =		\
 	xineplug_ao_out_none.la	\
 	xineplug_ao_out_file.la	\
@@ -66,7 +70,8 @@ xineplug_LTLIBRARIES =		\
 	$(pulseaudio_module)	\
 	$(directx2_module)	\
 	$(fusionsound_module)	\
-	$(jack_module)
+	$(jack_module)		\
+	$(sndio_module)
 
 xineplug_ao_out_none_la_SOURCES = audio_none_out.c
 xineplug_ao_out_none_la_LIBADD = $(XINE_LIB) $(LTLIBINTL)
@@ -115,3 +120,7 @@ xineplug_ao_out_fusionsound_la_CFLAGS = $(AM_CFLAGS) $(FUSIONSOUND_CFLAGS)
 xineplug_ao_out_jack_la_SOURCES = audio_jack_out.c
 xineplug_ao_out_jack_la_LIBADD = $(XINE_LIB) $(JACK_LIBS) $(LTLIBINTL)
 xineplug_ao_out_jack_la_CFLAGS = $(AM_FLAGS) $(JACK_CFLAGS)
+
+xineplug_ao_out_sndio_la_SOURCES = audio_sndio_out.c
+xineplug_ao_out_sndio_la_LIBADD = $(XINE_LIB) $(SNDIO_LIBS)
+xineplug_ao_out_sndio_la_CFLAGS = $(AM_CFLAGS) $(SNDIO_CFLAGS)
