@@ -68,10 +68,18 @@ xine-lib (1.1.90) (Unreleased)
   * Report more video output capabilities via (port)->get_capabilities():
     colour controls, zooming, colour keying.
 
+xine-lib (1.1.17) 2009-??-??
+  * Add support for Matroska SIMPLEBLOCK.
+  * Add support for sndio (OpenBSD sound API).
+  * Correct invalid MIME info in the MOD demuxer.
+  * Fix a resource leak in libdvdnav.
+  * Properly NUL-terminate when reading ID3v2.2 tag content.
+  * Fix handling of the length of UTF-16 content sourced from, e.g., ID3 tags.
+
 xine-lib (1.1.16.3) 2009-04-03
   * Security fixes:
     - Fix another possible int overflow in the 4XM demuxer.
-      (ref. TKADV2009-004, CVE-2009-0385)
+      (ref. TKADV2009-004, CVE-2009-0698)
     - Fix an integer overflow in the Quicktime demuxer.
   * Enable libmpeg2new (if configured with --enable-libmpeg2new).
     This is not yet production code; the old mpeg2 decoder remains the default.
@@ -93,7 +101,7 @@ xine-lib (1.1.16.2) 2009-02-10
   * More malloc checking (ref. CVE-2008-5240).
   * Fix race conditions in gapless_switch (ref. kde bug #180339)
   * Fix a possible integer overflow in the 4XM demuxer.
-    (TKADV2009-004, CVE-2009-0385)
+    (TKADV2009-004, CVE-2009-0698)
 
 xine-lib (1.1.16.1) 2009-01-11
   * Fix build with older ffmpeg, both internal and in Debian 5.0.
